<resources>
    <string name="app_name">Zenstudy</string>
    <string name="pandaboo_logo">Zenstudy Logo</string>
    <string name="login_text">Login</string>
    <string name="sign_in_to_your_account_text">Sign in to your account</string>
    <string name="username_icon">Username Icon</string>
    <string name="username_text">Username</string>
    <string name="password_icon">Password Icon</string>
    <string name="password_text">Password</string>
    <string name="i_forgot_my_password_text">I forgot my password.</string>
    <string name="click_here_to_reset_text"> Click here to reset.</string>
    <string name="register_new_account_text">Register New Account</string>
    <string name="start_button">START</string>
    <string name="music_icon">Music Icon(Not Muted)</string>
    <string name="timer_icon">Timer Icon</string>
    <string name="goodjob">GoodJobtext</string>
    <string name="set_timer_text">Set Timer</string>
    <string name="studyMinutes">studyMinutes</string>
    <string name="studyMin">studyMin</string>
    <string name="pauseMin">pauseMin</string>
    <string name="earnedBamboo">earnedBamboo</string>
    <string name="pauseMinutes">pauseMinutes</string>
    <string name="totalEarned">totalEarned</string>
    <string name="redoTimer">redoTimer</string>
    <string name="backHome">backHome</string>
    <string name="totalBamboo">totalBamboo</string>
    <string name="bamboo_icon">bamboo icon</string>
    <string name="home_button">home button</string>
    <string name="redo_button">redo button</string>
    <string name="total_bamboo_currency">total bamboo currency</string>
    <string name="button">Button</string>
    <string name="panda">Zenstudy</string>
    <string name="shop">Shop</string>
    <string name="planner">Planner</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="view_success">View Success</string>
    <string name="bamboo_currency">bamboo currency</string>
    <string name="backhome">backHome</string>
    <string name="pandaimage">ZenstudyImage</string>
    <string name="bamboogrowing">bambooGrowing</string>
    <string name="backToHome">Back</string>
    <string name="back">Back</string>
    <string name="bamboocurrencyimage">bambooCurrencyImage</string>
    <string name="_00">00</string>
    <string name="panda_shop_bg">ZenstudyShopBg</string>
    <string name="pandashopword">ZenstudyShopWord</string>
    <string name="roomskintitle">roomSkinTitle</string>
    <string name="defaultskin">defaultSkin</string>
    <string name="skin1">skin1</string>
    <string name="skin2">skin2</string>
    <string name="skin3">skin3</string>
    <string name="skin4">skin4</string>
    <string name="skin5">skin5</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="timer_countdown_separator">:</string>
    <string name="cancel_text">Cancel</string>
    <string name="pause_text">Pause</string>
    <string name="redo_timer_text">Redo Timer</string>
    <string name="home_text">Home</string>
    <string name="failed_timer_text">DON\'T GET TOO DISTRACTED NEXT TIME!</string>
    <string name="failed_timer_image_text">Failed Timer Image</string>
    <string name="redo_timer_icon_text">Redo Timer Icon</string>
    <string name="home_icon_text">Home Icon</string>
    <string name="good_job_text">GOOD JOB!</string>
    <string name="study_minutes_text"><u>Study Duration</u></string>
    <string name="pause_minutes_text"><u>Pause Duration</u></string>
    <string name="total_earned_text"><u>Total Earned</u></string>
    <string name="pause_timer_text">Don\'t pause for too long or else you will receive fewer coins!</string>
    <string name="resume_icon_text">Resume Icon</string>
    <string name="panda_celebrating">Zenstudy Celebrating</string>
    <string name="cancel_session_text">Do you want to end the session?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="purchase_text">Do you want to purchase this item?</string>
    <string name="equip_text">Do you want to equip this item?</string>
    <string name="play_or_pause_music_text">Play or pause music</string>
    <string name="music_text">Music</string>
    <string name="music_description">Series of mixes that loops for your study sessions</string>
    <string name="music_equipped_text">(Equipped)</string>
    <string name="shop_skin_owned">Owned</string>
    <string name="due_date_separator">.</string>
    <string-array name="priority_text">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="month_year">Month Year</string>
    <string name="previous_button">previous_button</string>
    <string name="next_button">next_button</string>
    <string name="more_menu">more_menu</string>
    <string name="event_add">event_add</string>
    <string name="sun">Sun</string>
    <string name="to_text">to</string>
    <string name="edit_button_text">Edit Button</string>
    <string name="email">Email</string>
    <string name="register_text">Register</string>
    <string name="i_have_an_account">I have an account. </string>
    <string name="click_here_to_sign_in"> Click here to sign in</string>
    <string name="signup_text">Sign up</string>
    <string name="email_text">Email</string>
    <string name="reset_password">reset password</string>
    <string name="panda_crying_text">Zenstudy Crying</string>
</resources>