<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
    android:background="@color/airforceblue"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/pandabooLogo"
        android:layout_width="240dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/pandaboo_logo"
        android:src="@mipmap/pandaboo_transparent" />


    <TextView
        android:id="@+id/pandabooTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pandabooLogo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/redressed"
        android:text="@string/app_name"
        android:textColor="@color/pale_yellow"
        android:textSize="75sp" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pandabooTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="20sp"/>


    <RelativeLayout
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:id="@+id/EmailArea"
        android:layout_below="@+id/signInText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <ImageView
            android:src="@drawable/email_pic"
            android:layout_width="30dp"
            android:contentDescription="@string/email_text"
            android:id="@+id/EmailIcon"
            app:tint="@color/black"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/resetEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_toEndOf="@+id/EmailIcon"
            android:layout_toRightOf="@+id/EmailIcon"
            android:autofillHints="password"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resetPasswordArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailArea"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_an_account"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/clickSignInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/forgotPasswordText"
            android:layout_toRightOf="@+id/forgotPasswordText"
            android:text="@string/click_here_to_sign_in"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/EmailArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_border"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />



</RelativeLayout>