<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue"
    android:paddingTop="20dp"
    android:paddingHorizontal="15dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/failedTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/good_job_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"></TextView>

    <RelativeLayout
        android:id="@+id/ImageHolder"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/failedTimerText"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/pandaCelebrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/panda_celebrating"
            android:src="@drawable/panda_celebrate"></ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/InfoHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ImageHolder"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/totalStudyMinutesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/study_minutes_text"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/totalStudyMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalStudyMinutesText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/black">
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/totalPauseMinutesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalStudyMinutes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/pause_minutes_text"
            android:textColor="@color/black">
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/totalPauseMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalPauseMinutesText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>

        <RelativeLayout
            android:id="@+id/bambooEarnedArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalPauseMinutes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/totalBambooEarnedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/total_earned_text"
                android:textColor="@color/black"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/totalBambooEarned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalBambooEarnedText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="100"
                android:textColor="@color/black"
                android:textSize="20sp"></TextView>

            <ImageView
                android:id="@+id/bambooImage"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_toEndOf="@+id/totalBambooEarnedText"
                android:layout_toRightOf="@+id/totalBambooEarnedText"
                android:contentDescription="@string/bamboo_icon"
                android:src="@drawable/bamboo"
                tools:ignore="ImageContrastCheck"></ImageView>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoHolder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <RelativeLayout
            android:id="@+id/redoTimerArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/redoTimerIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/transparent"
                android:contentDescription="@string/redo_timer_icon_text"
                android:scaleType="fitCenter"
                android:src="@drawable/redo_icon"
                app:tint="@color/black"></ImageButton>

            <TextView
                android:id="@+id/redoTimerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/redoTimerIcon"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:text="@string/redo_timer_text"
                android:textSize="15sp"
                android:textColor="@color/black">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/homeArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/redoTimerArea"
            android:layout_toEndOf="@+id/redoTimerArea"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp">

            <ImageButton
                android:id="@+id/homeIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@color/transparent"
                android:contentDescription="@string/home_icon_text"
                android:scaleType="fitCenter"
                android:src="@drawable/home_icon"
                app:tint="@color/black"></ImageButton>

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/homeIcon"
                android:layout_centerHorizontal="true"
                android:text="@string/home_text"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp">
            </TextView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>